# Pillow

./: Emakefile  INSTALL.Unix  LICENSE  Makefile  Makefile.am  README  acinclude.m4.in  bootstrap  configure.ac  start.sh
etc/: Makefile.am  pillow.ini
etc/default/: pillow
etc/init/: pillow  pillow.tpl.in
etc/pillow/: Makefile.am  default.ini.tpl.in  local.ini
priv/: Makefile.am
priv/styles/: pillow.css
src/: Makefile.am  make_boot.erl  pillow.app  pillow.app.tpl.in  pillow.erl  pillow_app.erl  pillow_couch.erl  pillow_monitor.erl  pillow_reducer.erl  pillow_router.erl  pillow_routing_table.app  pillow_routing_table.erl  pillow_status.erl  pillow_sup.erl  pillow_util.erl  reducers.erl  static_resource.erl
test/: 001-load-modules.t  002-pillow.t  003-pillow-couch.t  Makefile.am  etap_t_001.erl  etap_t_002.erl  etap_t_003.erl  run.tpl  test_util.erl.in
